# Sonus

./: .gitignore  README-ZH.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.vue  declarations.d.ts  main.ts
src-spider/: .gitignore  README.md
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: database.rs  init.rs  mod.rs  window.rs
src-tauri/src/core/: controller.rs  mod.rs
src-tauri/src/core/lyrics/: mod.rs
src-tauri/src/core/player/: audio_backend.rs  controller.rs  mod.rs  state.rs
src-tauri/src/core/playlist/: manager.rs  mod.rs  play_mode.rs
src-tauri/src/core/task_queue/: mod.rs  queue.rs  task.rs  tauri_integration.rs  tracker.rs
src-tauri/src/ipc/: core_commands.rs  library_commands.rs  mod.rs  task_queue_commands.rs  window_commands.rs
src-tauri/src/play/: mod.rs
src/assets/: font.css  index.css  index.html  test.ttml
src/components/custom/: AboutDialog.vue  AppEndbar.vue  AppSidebar.vue  AppTopbar.vue  DeveloperOptionsDialog.vue  DynamicBackground.vue  LyricsComponent.vue  MacOSControl.vue  MiniPlayerControl.vue  PlaylistComponent.vue  ScreenLyrics.vue  SettingsDialog.vue  WindowsControl.vue
src/components/eui/: LyricsView.vue
src/components/ui/command/: Command.vue
src/i18n/: en-us.ts  zh-cn.ts
src/router/: index.ts
src/stores/: appStore.ts  playerStore.ts
src/utils/: invokeWhenReady.ts
src/views/: MainView.vue
src/views/pages/: HomePage.vue  SongsPage.vue
(+8 files in other folders)
